# fontforge-ref-sel-util

./: LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml
fontforge_refsel/: __init__.py  __main__.py  distortedRefs.py  nestedRefs.py  unreachables.py  util.py
test/: test_distortedRefs.py  test_nestedRefs.py  test_sample.py  test_unreachables.py
test/assets/: Inconsolata-LGC.sfd
