[metadata]
name = fontforge_refsel
version = 0.0.0
author = MihailJP
author_email = mihailjp@gmail.com
description = Utility FontForge_plugin on references and selections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MihailJP/fontforge-ref-sel-util
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts

[options]
packages = fontforge_refsel
python_requires = >=3.8

[options.entry_points]
fontforge_plugin =
    Reference and selection utility = fontforge_refsel.__main__
