[metadata]
name = fontforge_ref_sel_util
version = 0.1.0
author = MihailJP
author_email = mihailjp@gmail.com
description = Utility FontForge_plugin on references and selections
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MihailJP/fontforge-ref-sel-util
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts

[options]
packages = fontforge_refsel
python_requires = >=3.8

[options.entry_points]
fontforge_plugin =
    Reference and selection utility = fontforge_refsel.__main__
